--- a/app/globals.css
+++ b/app/globals.css
@@ -2,80 +2,110 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-  :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 47.4% 11.2%;
-
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
-
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 47.4% 11.2%;
-
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 47.4% 11.2%;
-
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
-
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
-
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
-
-    --destructive: 0 100% 50%;
-    --destructive-foreground: 210 40% 98%;
-
-    --ring: 215 20.2% 65.1%;
-
-    --radius: 0.5rem;
-  }
-
-  .dark {
-    --background: 224 71% 4%;
-    --foreground: 213 31% 91%;
-
-    --muted: 223 47% 11%;
-    --muted-foreground: 215.4 16.3% 56.9%;
-
-    --popover: 224 71% 4%;
-    --popover-foreground: 215 20.2% 65.1%;
-
-    --card: 224 71% 4%;
-    --card-foreground: 213 31% 91%;
-
-    --border: 216 34% 17%;
-    --input: 216 34% 17%;
-
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 1.2%;
-
-    --secondary: 222.2 47.4% 11.2%;
-    --secondary-foreground: 210 40% 98%;
-
-    --accent: 216 34% 17%;
-    --accent-foreground: 210 40% 98%;
-
-    --destructive: 0 63% 31%;
-    --destructive-foreground: 210 40% 98%;
-
-    --ring: 216 34% 17%;
-
-    --radius: 0.5rem;
-  }
+.text-gradient {
+  background: linear-gradient(45deg, hsl(var(--inc)), hsl(var(--s)));
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
 }
 
-@layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
-    font-feature-settings: "rlig" 1, "calt" 1;
-  }
+.background-gradient {
+  background: linear-gradient(45deg, hsl(var(--inc)), hsl(var(--s)));
+}
+
+.hidden-scrollbar::-webkit-scrollbar {
+  display: none;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+code[class*="hljs"] {
+  background: unset;
+}
+
+.transparent-fade {
+  -webkit-mask-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(rgba(0, 0, 0, 0.05)),
+    to(rgba(0, 0, 0, 0))
+  );
+  mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0));
+}
+
+.text-glow {
+  @apply text-transparent text-gradient leading-none;
+}
+
+.h0 {
+  @apply text-3xl md:text-5xl;
+}
+
+.h1 {
+  @apply text-2xl md:text-4xl;
+}
+
+.h2 {
+  @apply text-xl md:text-3xl;
+}
+
+.h3 {
+  @apply text-lg md:text-2xl;
+}
+
+.h4 {
+  @apply text-base md:text-lg;
+}
+
+.h5 {
+  @apply text-sm md:text-base;
+}
+
+.h6 {
+  @apply text-xs md:text-sm;
+}
+
+.text-glass {
+  /* Text Glass Efffect */
+  background: linear-gradient(
+    104.02deg,
+    rgba(255, 255, 255, 0.4) -7.31%,
+    #ffffff -7.3%,
+    rgba(255, 255, 255, 0.4) 112.94%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+}
+
+.background-glass {
+  background: linear-gradient(
+    107.39deg,
+    rgba(255, 255, 255, 0.2) 20.65%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  /* Glass Shadow */
+
+  box-shadow: 0px 4px 24px -1px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(20px);
+  /* Note: backdrop-filter has minimal browser support */
+}
+
+.drop-glow {
+  filter: drop-shadow(0px 0px 39.96px #854c4c);
+}
+
+.background-dotted {
+  background-image: linear-gradient(
+    45deg,
+    hsl(var(--p)),
+    hsl(var(--s)) 33%,
+    rgba(255, 255, 255, 0) 0%
+  );
+  background-position: center;
+  background-size: 2px 8px;
+  background-repeat: repeat-y;
 }
